# Project-Katana

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
doc/: .gitignore  Katana.drawio  README.md  Use-case.drawio  Workflow.drawio
main/: CMakeLists.txt  cmd_parser.c  deauther.c  dhcp_server.c  dns_server.c  frame_eapol_validator.c  frame_output.c  frame_parser.c  injector.c  main.c  utils.c  web_server.c  wifi_ctl.c
main/include/: cmd_parser.h  deauther.h  dhcp_server.h  dns_server.h  frame_eapol_validator.h  frame_output.h  frame_parser.h  injector.h  page_index.h  utils.h  web_server.h  wifi_ctl.h
serial_com/: esp32_com.py  esp32_event.py  hash_calc.py  main.py  utils.py
web/: index.html  index_packed.html
